feat(game): unify roster handling with allPlayers + active table across flow, state, and persistence
- introduce/standardize allPlayers roster with active table semantics (4 seated players)
- update WhistGame player/dealer/rotation/recalibration behavior to support roster changes safely
- align CountState and ScoreBoardState player selection/removal logic with updated roster model
- adapt Adapter player mapping/selection flow to remain consistent with state-provided player lists
- sync GamePersistenceService save/load round restoration with new roster semantics
- update Deck/game flow touchpoints impacted by active-player assumptions

This refactor ensures add/remove/restore/score workflows stay consistent when roster size changes.