@@ -5,6 +5,8 @@ import base.domain.card.Card;
 import base.domain.card.Suit;
 import base.domain.commands.GameCommand;
 import base.domain.deck.Deck;
+import static base.domain.deck.Deck.DEAL_TYPE;
+
 import base.domain.observer.GameObserver;
 import base.domain.player.Player;
 import base.domain.player.PlayerId;
@@ -29,16 +31,18 @@ import java.util.Random;
  */
 public class WhistGame {
 
+    public static final int REQUIRED_PLAYERS = 4;
+
     private State state;
     private Deck deck;
     private Player dealerPlayer;
-    private final List<Player> players;
+    private final List<Player> allPlayers;
     private final List<Round> rounds;
     private final List<GameObserver> observers;
 
     public WhistGame() {
         this.state = null;
-        this.players = new ArrayList<>();
+        this.allPlayers = new ArrayList<>();
         this.rounds = new ArrayList<>();
         this.observers = new ArrayList<>();
         this.dealerPlayer = null;
@@ -51,11 +55,12 @@ public class WhistGame {
      * Centralizes the rotational logic so State classes don't have to do modulo math.
      */
     public Player getNextPlayer(Player currentPlayer) {
-        if (currentPlayer == null || !players.contains(currentPlayer)) {
+        List<Player> activePlayers = getPlayers();
+        if (currentPlayer == null || !activePlayers.contains(currentPlayer)) {
             throw new IllegalArgumentException("Cannot find next player: current player is not at the table.");
         }
-        int currentIndex = players.indexOf(currentPlayer);
-        return players.get((currentIndex + 1) % players.size());
+        int currentIndex = activePlayers.indexOf(currentPlayer);
+        return activePlayers.get((currentIndex + 1) % activePlayers.size());
     }
 
     /**
@@ -64,28 +69,68 @@ public class WhistGame {
      */
     public Player getPlayerById(PlayerId id) {
         if (id == null) throw new IllegalArgumentException("PlayerId cannot be null.");
-        return players.stream()
+        return allPlayers.stream()
                 .filter(p -> p.getId().equals(id))
                 .findFirst()
                 .orElseThrow(() -> new IllegalStateException("PlayerId " + id + " not found in the game."));
     }
 
+    /**
+     * Returns the active players currently seated at the table (max 4).
+     */
     public List<Player> getPlayers() {
-        return Collections.unmodifiableList(players);
+        if (allPlayers.size() < REQUIRED_PLAYERS) {
+            throw new IllegalStateException("Active table is not ready (needs 4 players).");
+        }
+        return List.copyOf(allPlayers.subList(0, REQUIRED_PLAYERS));
+    }
+
+    /**
+     * Returns all players currently participating in this game.
+     */
+    public List<Player> getAllPlayers() {
+        return List.copyOf(this.allPlayers);
+    }
+
+    public int getTotalPlayerCount() {
+        return allPlayers.size();
     }
 
     public List<PlayerId> getPlayerIds() {
-        return players.stream().map(Player::getId).toList();
+        return allPlayers.stream().map(Player::getId).toList();
     }
 
     public void addPlayer(Player player) {
         if (player == null) throw new IllegalArgumentException("Player cannot be null");
-        if (players.contains(player)) throw new IllegalArgumentException("Player already in Game");
-        this.players.add(player);
+        if (allPlayers.contains(player))
+            throw new IllegalArgumentException("Player already in Game");
+        this.allPlayers.add(player);
+    }
+
+    /**
+     * Removes any player from the game roster as long as at least 4 players remain.
+     *
+     * @param player player to remove
+     */
+    public void removePlayer(Player player) {
+        if (player == null) throw new IllegalArgumentException("Player cannot be null");
+        if (getTotalPlayerCount() <= REQUIRED_PLAYERS) {
+            throw new IllegalStateException("Cannot remove player: at least 4 total players are required.");
+        }
+
+        boolean removed = this.allPlayers.remove(player);
+        if (!removed) {
+            throw new IllegalArgumentException("Cannot remove player: player is not part of this game.");
+        }
+
+        if (player.equals(this.dealerPlayer)) {
+            this.dealerPlayer = getPlayers().isEmpty() ? null : getPlayers().getFirst();
+        }
     }
 
     public void resetPlayers() {
-        this.players.clear();
+        this.allPlayers.clear();
+        this.dealerPlayer = null;
     }
 
     // --- Dealer Management ---
@@ -95,22 +140,23 @@ public class WhistGame {
     }
 
     public void setDealerPlayer(Player dealer) {
-        if (dealer != null && !players.contains(dealer)) {
+        if (dealer != null && !getPlayers().contains(dealer)) {
             throw new IllegalArgumentException("Dealer must be a player currently in the game.");
         }
         this.dealerPlayer = dealer;
     }
 
     public void setRandomDealer() {
-        if (players.isEmpty()) throw new IllegalStateException("Cannot set random dealer: no players in game.");
-        this.dealerPlayer = players.get(new Random().nextInt(players.size()));
+        List<Player> activePlayers = getPlayers();
+        if (activePlayers.isEmpty()) throw new IllegalStateException("Cannot set random dealer: no players in game.");
+        this.dealerPlayer = activePlayers.get(new Random().nextInt(activePlayers.size()));
     }
 
     /**
      * Advances the dealer designation to the next player using our clean roster method.
      */
     public void advanceDealer() {
-        if (players.isEmpty() || dealerPlayer == null) {
+        if (getPlayers().isEmpty() || dealerPlayer == null) {
             throw new IllegalStateException("Cannot advance dealer: missing players or current dealer.");
         }
         this.dealerPlayer = getNextPlayer(dealerPlayer);
@@ -165,29 +211,33 @@ public class WhistGame {
      * or if the deck deals invalid hands.
      */
     public Suit dealCards() {
+        List<Player> activePlayers = getPlayers();
         if (this.deck == null) throw new IllegalStateException("Cannot deal cards: Deck is not set.");
-        if (this.players.size() != 4) throw new IllegalStateException("Cannot deal cards: Table must have exactly 4 players.");
+        if (activePlayers.size() != REQUIRED_PLAYERS) throw new IllegalStateException("Cannot deal cards: Table must have exactly 4 players.");
 
         this.deck.shuffle();
-        List<List<Card>> hands = this.deck.deal();
+        List<List<Card>> hands = this.deck.deal(DEAL_TYPE.WHIST);
 
-        for (int i = 0; i < this.players.size(); i++) {
-            this.players.get(i).setHand(hands.get(i));
+        for (int i = 0; i < activePlayers.size(); i++) {
+            activePlayers.get(i).setHand(hands.get(i));
         }
 
-        return this.players.getLast().getHand().getLast().suit();
+        return activePlayers.getLast().getHand().getLast().suit();
     }
 
     public void initializeNextRound(Player startingPlayer) {
-        if (this.players.size() != 4) throw new IllegalStateException("Game must have exactly 4 players to start a round.");
-        if (!this.players.contains(startingPlayer)) throw new IllegalArgumentException("Starting player not at the table.");
+        List<Player> activePlayers = getPlayers();
+        if (activePlayers.size() < REQUIRED_PLAYERS)
+            throw new IllegalStateException("Game must have at least 4 players to start a round.");
+        if (!activePlayers.contains(startingPlayer))
+            throw new IllegalArgumentException("Starting player not at the table.");
 
         int multiplier = 1;
         if (!this.rounds.isEmpty() && getCurrentRound().getHighestBid().getType() == BidType.PASS) {
             multiplier = 2;
         }
 
-        addRound(new Round(this.players, startingPlayer, multiplier));
+        addRound(new Round(activePlayers, startingPlayer, multiplier));
     }
 
     // --- State Machine ---
@@ -241,7 +291,7 @@ public class WhistGame {
     }
 
     public void notifyRoundStarted() {
-        List<PlayerId> ids = players.stream().map(Player::getId).toList();
+        List<PlayerId> ids = getPlayers().stream().map(Player::getId).toList();
         for (GameObserver observer : observers) observer.onRoundStarted(ids);
     }
 
@@ -253,21 +303,36 @@ public class WhistGame {
         for (GameObserver observer : observers) observer.onBidPlaced(bidTurn);
     }
 
-    public void removePlayer(Player player) {
-        this.players.remove(player);
-    }
     public  void removeRound(Round round){
         this.rounds.remove(round);
     }
+
+    /**
+     * Rotates seats by moving the current dealer to the end of the global queue.
+     */
+    public void rotateActivePlayers() { //TODO: make use of this
+        if (getTotalPlayerCount() <= REQUIRED_PLAYERS) return;
+
+        int dealerIndex = allPlayers.indexOf(dealerPlayer);
+        if (dealerPlayer == null || dealerIndex < 0 || dealerIndex >= REQUIRED_PLAYERS) {
+            throw new IllegalStateException("Cannot rotate players: dealer must be one of the active players.");
+        }
+
+        Player leavingPlayer = allPlayers.remove(dealerIndex);
+        allPlayers.add(leavingPlayer);
+    }
+
     /**
      * Recalculates all player scores from scratch based on the current round history.
      * Call this after removing a round to ensure the scoreboard is accurate.
      */
     public void recalibrateScores() {
         // 1. Reset all players to 0
-        for (Player p : this.players) {
+        for (Player p : this.allPlayers) {
             p.updateScore(-p.getScore());
         }
+
+        List<PlayerId> currentPlayerIds = getPlayerIds();
 
         // 2. Re-apply deltas from all rounds currently in the list
         for (Round round : this.rounds) {
@@ -276,9 +341,14 @@ public class WhistGame {
 
             // Map the deltas back to the players based on their index in the round
             for (int i = 0; i < roundPlayers.size(); i++) {
-                Player p = roundPlayers.get(i);
+                Player historicalPlayer = roundPlayers.get(i);
+                if (!currentPlayerIds.contains(historicalPlayer.getId())) {
+                    continue;
+                }
+
                 int delta = deltas.get(i);
-                p.updateScore(delta);
+                Player currentPlayer = getPlayerById(historicalPlayer.getId());
+                currentPlayer.updateScore(delta);
             }
         }
     }
